tests/ast_interpreter/err_var_redeclare.expected
<string>:3:9: error: variable "x" already defined
    var x = 20;
        ^
